# scrapping-service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirement.txt  requirements.txt
src/: __init__.py  main.py
src/database/: mongo_db.py
src/models/: PostsModel.py  postModel.py
src/routers/: __init__.py  fbScrapper.py
tests/: test_fbScrapper.py
