[tool.poetry]
name = "src"
version = "0.1.0"
description = "A facebook scrapper"
authors = [
    "iheb saad <iheb.saad@esprit.tn>",
]
maintainers = [
       "iheb saad <iheb.saad@esprit.tn>"
      

]
classifiers = [
    "Environment :: Web Environment",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11.6",
    "Framework :: FastAPI",
    
]
license = "Proprietary"
readme = "README.md"
homepage = ""
repository = ""


[tool.poetry.dependencies]
python = ">=3.9, <4"
fastapi = "^0.95.0"
GitPython = "^3.1.20"
uvicorn = "0.21.1"
facebook-scraper = "0.2.59"
importlib-metadata = "4.2.0"
pytest = "^7.3.0"
pytest-cov ="^4.1.0"
pytest-html ="^3.2.0"
pytest-shutil = "1.7.0"
pymongo = "4.6.0"




[tool.poetry.dev-dependencies]
ruff = "0.0.269"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.269"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"